--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
+
 .container_range {
     background: rgb(234, 225, 252);
-    width:250px;
+    width:200px;
     height:100px;
     display: flex;
-    align-items: center;
+    align-items: left;
     flex-direction: column;
     padding-top: 30px;
 }
