--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 .container_range {
     background: rgb(234, 225, 252);
     width:200px;
-    height:100px;
+    height:40px;
     display: flex;
     align-items: left;
     flex-direction: column;
@@ -10,7 +10,7 @@
 }
 
 .range {
-    width:200px;
+    width:100%;
     height:10px;
     background: #fff;
     border-radius: 5px;
@@ -32,3 +32,20 @@
     cursor: pointer;
     border: 2px solid #fff;
 }
+.output {
+    width: 30px;
+    height: 20px;
+    background: rgb(66, 47, 238);
+    position: absolute;
+    top: 20px;
+}
+
+.outputRight {
+    left: 85%;
+}
+/* .steps {
+    width: 100%;
+    height: 50%;
+    background: red;
+    
+} */
