--- a/style.css
+++ b/style.css
@@ -1,16 +1,21 @@
-
+body {
+    padding: 0;
+    margin: 0;
+}
 .container_range {
     background: rgb(234, 225, 252);
-    width:200px;
+    width:300px;
     height:40px;
     display: flex;
     align-items: left;
     flex-direction: column;
     padding-top: 30px;
+    margin: 30px 40px;;
+    
 }
 
 .range {
-    width:100%;
+    width:91%;
     height:10px;
     background: #fff;
     border-radius: 5px;
@@ -22,6 +27,7 @@
     height:10px;
     border-radius: 5px;
     position: absolute;
+    width: 0%;
 }
 
 .thumb {
@@ -32,6 +38,8 @@
     cursor: pointer;
     border: 2px solid #fff;
 }
+
+
 .output {
     width: 30px;
     height: 20px;
@@ -42,6 +50,20 @@
 
 .outputRight {
     left: 85%;
+}
+
+#valueRight {
+    position: relative;
+}
+
+#valueRight:before {
+    content: '';
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    background: red;
+    position: absolute;
+    top:0
 }
 /* .steps {
     width: 100%;
