Change system from px to %

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
     align-items: left;
     flex-direction: column;
     padding-top: 30px;
-    margin: 30px 40px;;
+    margin: 30px 40px;
     
 }
 
