--- a/style.css
+++ b/style.css
@@ -7,14 +7,14 @@ body {
     display: flex;
     align-items: left;
     flex-direction: column;
-    margin: 30px 40px;
+    margin: 70px 40px;
     
 }
 
 .range {
     width:100%;
     height:10px;
-    background: #fff;
+    background: rgb(175, 175, 175);
     border-radius: 5px;
     position: relative;
 }
@@ -31,7 +31,7 @@ body {
     background:#00ffc8;
     border-radius: 50%;
     position: absolute;
-    top:-4px;
+    top:-4px;   
     cursor: pointer;
     border: 2px solid #fff;
 }
@@ -61,6 +61,23 @@ body {
     background: red;
     position: absolute;
     top:0
+}
+
+.valueTop {
+    height: 20px;
+    background: #00ffc8;
+    position: absolute;
+    top:-45px;
+    text-align: center;
+    padding: 5px;
+}
+
+.valueTopRight {
+    left: 120px;
+}
+
+.hidden {
+    display: none;
 }
 
 /* .steps {
