--- a/rangeVertical.css
+++ b/rangeVertical.css
@@ -1,13 +1,16 @@
 .container_range_vertical {
-    height:300px;
+    height:200px;
     width: 10px;
     position: relative;
+    margin-left: 50px;
 }
 
 .rangeVertical {
     width: 10px;
+    height:200px;
     border-radius: 1px solid #000;
-    background: grey;
+    background: #AFAFAF;
+    border-radius: 5px;
 }
 
 .field_range_vertical {
@@ -15,7 +18,6 @@
     width: 10px;
     border-radius: 5px;
     position: absolute;
-    height: 0%;
 }
 
 .thumbVertical {
@@ -24,4 +26,6 @@
     height: 18px;
     background: #b36;
     border-radius: 50%;
+    left: -4px;
+    cursor: pointer;
 }
