--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ body {
 .range {
     width:100%;
     height:10px;
-    background: rgb(175, 175, 175);
+    background: rgb(175, 175, 175, 0.5);
     border-radius: 5px;
     position: relative;
 }
@@ -28,12 +28,14 @@ body {
 }
 
 .thumb {
-    background:#00ffc8;
-    border-radius: 50%;
     position: absolute;
     top:-4px;   
     cursor: pointer;
-    border: 2px solid #fff;
+    background: #fff;
+    border-radius: 3px;
+    top: -4px;
+    border: 1px solid #000;
+    box-shadow: 1px 1px 0px #000;
 }
 
 .valueTop {
