Slider correct draw

--- a/src/range/View/components/thumb/thumb.scss
+++ b/src/range/View/components/thumb/thumb.scss
@@ -1,5 +1,7 @@
 .j-fer-slider__thumb {
     position: absolute;
+    width: 10px;
+    height: 18px;
     top:-4px;   
     cursor: pointer;
     background: #fff;
