--- a/src/range/View/components/range/range.scss
+++ b/src/range/View/components/range/range.scss
@@ -1,5 +1,6 @@
-.j-fer-slider__range {
+.j-fer-slider {
     width:100%;
+    display: flex;
     height:10px;
     background: rgba(175, 175, 175, 0.5);
     border-radius: 5px;
