--- a/src/range/styleRange.scss
+++ b/src/range/styleRange.scss
@@ -4,26 +4,10 @@
 @import 'View/components/thumb/thumb.scss';
 @import 'View/components/tip/tip.scss';
 
-
-.j-fer-slider {
-    width:300px;
-    display: flex;
-    align-items: left;
-    flex-direction: column;
-    margin: 100px auto;
-  
-  &__range {
-    width:100%;
-    height:10px;
-    background: rgba(175, 175, 175, 0.5);
-    border-radius: 5px;
-    position: relative;
-
-    &_vertical {
-      width: 10px;
-      height: 100%;
-    }
-  }
+.huy {
+  width: 300px;
+  height: 600px;
+  padding: 50px;
 }
   
 //   &__bar {
