--- a/src/range/styleRange.scss
+++ b/src/range/styleRange.scss
@@ -4,14 +4,14 @@
 @import 'View/components/thumb/thumb.scss';
 @import 'View/components/tip/tip.scss';
 
-.huy {
+.qwe {
   width: 300px;
   height: 600px;
   padding: 50px;
 }
   
 //   &__bar {
-//     background: #00ffc8;
+//     backgrou nd: #00ffc8;
 //     height:10px;
 //     border-radius: 5px;
 //     position: absolute;
