--- a/src/range/View/components/step/step.scss
+++ b/src/range/View/components/step/step.scss
@@ -5,6 +5,7 @@
     justify-content: space-between;
     padding: 0;
     list-style: none;
+    user-select: none;
 
     &_item {
       user-select: auto;
