--- a/src/range/View/components/bar/bar.scss
+++ b/src/range/View/components/bar/bar.scss
@@ -1,9 +1,12 @@
 .j-fer-slider__bar {
     background: #00ffc8;
-    height:10px;
     border-radius: 5px;
     position: absolute;
-    width: 100%;
+
+    &_horizontal {
+        width: 100%;
+        height:10px;
+    }
 
     &_vertical {
         width: 10px;
