--- a/src/range/View/components/range/range.scss
+++ b/src/range/View/components/range/range.scss
@@ -1,13 +1,13 @@
-.j-fer-slider {
-    width:100%;
-    display: flex;
-    height:10px;
-    background: rgba(175, 175, 175, 0.5);
-    border-radius: 5px;
-    position: relative;
+// .j-fer-slider {
+//     width:100%;
+//     display: flex;
+//     height:10px;
+//     background: rgba(175, 175, 175, 0.5);
+//     border-radius: 5px;
+//     position: relative;
 
-    &_vertical {
-        width: 10px;
-        height: 100%;
-      }
-}
+//     &_vertical {
+//         width: 10px;
+//         height: 100%;
+//       }
+// }
