--- a/src/range/View/components/step/step.scss
+++ b/src/range/View/components/step/step.scss
@@ -7,6 +7,11 @@
     list-style: none;
     user-select: none;
 
+    &_vertical {
+      margin: 0 0 0 10px;
+      flex-direction: column;
+    }
+
     &_item {
       user-select: auto;
       }
