--- a/src/range/styleRange.scss
+++ b/src/range/styleRange.scss
@@ -9,78 +9,19 @@
   height: 600px;
   padding: 50px;
 }
+
+.j-fer-slider {
+  display: flex;
+  border-radius: 5px;
+  position: relative;
+
+  &_horizontal {
+    width:100%;
+    height:10px;
+  }
   
-//   &__bar {
-//     backgrou nd: #00ffc8;
-//     height:10px;
-//     border-radius: 5px;
-//     position: absolute;
-//     width: 0%;
-
-//     &_vertical {
-//         width: 10px;
-//         height: 100%;
-//     }
-//   }
-  
-//   &__thumb {
-//     position: absolute;
-//     top:-4px;   
-//     cursor: pointer;
-//     background: #fff;
-//     border-radius: 3px;
-//     border: 1px solid #000;
-//     box-shadow: 1px 1px 0px #000;
-
-//     &_vertical {
-//       bottom: 0%;
-//       top: 0%;
-//       transform: translate(-33%, -43%);
-//     }
-//   }
-  
-//   &__tip {
-//     height: 20px;
-//     background: #00ffc8;
-//     position: absolute;
-//     top:-45px;
-//     text-align: center;
-//     padding: 5px;
-//     font-weight: bold;
-//     border-radius: 5px 5px 5px 0px;
-
-//     &_vertical {
-//       transform: translate(-33%, -43%);
-//     }
-//   }
-  
-//   &__valueTopRight {
-//     left: 120px;
-//   }
-  
-//   &__steps {
-//     width:300px;
-//     height:15px;
-//     margin-top: 20px;
-//     display: flex;
-
-//     &_stepsIn {
-//         display: flex;
-//         flex: 1 1 auto;
-//         align-items: center;
-//         justify-content: space-around;
-//       }
-
-//     &_startStep {
-//         margin-right: 5px;
-//       }
-      
-//     &_endStep {
-//         margin-right: -5px;
-//       }
-//   }
-// }
-
-// .hidden {
-//     display: none;
-// }
+  &_vertical {
+      width: 10px;
+      height: 100%;
+    }
+}
