--- a/src/range/View/components/bar/bar.scss
+++ b/src/range/View/components/bar/bar.scss
@@ -1,5 +1,5 @@
 .j-fer-slider__bar {
-    background: #00ffc8;
+    background: rgba(175, 175, 175, 0.5);
     border-radius: 5px;
     position: absolute;
 
