--- a/src/range/View/components/range/range.scss
+++ b/src/range/View/components/range/range.scss
@@ -1,13 +1,17 @@
-// .j-fer-slider {
-//     width:100%;
-//     display: flex;
-//     height:10px;
-//     background: rgba(175, 175, 175, 0.5);
-//     border-radius: 5px;
-//     position: relative;
+.j-fer-slider__range {
+    position: absolute;
+    background: #00ffc8;
 
-//     &_vertical {
-//         width: 10px;
-//         height: 100%;
-//       }
-// }
+    &_horizontal {
+        height: 100%;
+        left: 0%;
+        right: 0%;
+      }
+    
+      &_vertical {
+        height: auto;
+        width: 100%;
+        bottom: 0%;
+        top: 0%;
+      }
+}
