Fixed added class horizontal for sub

--- a/src/range/View/components/range/range.scss
+++ b/src/range/View/components/range/range.scss
@@ -1,6 +1,7 @@
 .j-fer-slider__range {
     position: absolute;
     background: #00ffc8;
+    border-radius: 5px;
 
     &_horizontal {
         height: 100%;
