--- a/src/range/View/components/step/step.scss
+++ b/src/range/View/components/step/step.scss
@@ -1,7 +1,7 @@
 .j-fer-slider__step {
     width:100%;
-    height:15px;
     display: flex;
+    position: relative;
     justify-content: space-between;
     padding: 0;
     list-style: none;
