--- a/src/demo/panel/panel.scss
+++ b/src/demo/panel/panel.scss
@@ -1,12 +1,29 @@
+.preview {
+  width: 95%;
+  margin: 50px auto;
+
+  &__title {
+    margin-bottom: 50px;
+  }
+
+  &__container-slider {
+    width: 80%;
+    margin: 0 auto;
+  }
+
+  &__container-panel {
+    margin-top: 50px;
+  }
+
+}
+
 .options {
     width: 80%;
     height: 241px;
     outline: 1px solid rgba(0, 0, 0, 0.25);
     margin: 0 auto;
     padding: 30px 5px 5px 5px;
-    margin-top: 50px;
     border-radius: 4px;
-  
   
   &__buttons_container {
     width: 80%;
