--- a/src/range/View/components/tip/tip.scss
+++ b/src/range/View/components/tip/tip.scss
@@ -2,10 +2,18 @@
     height: 20px;
     background: #00ffc8;
     position: absolute;
-    top:-45px;
     text-align: center;
     padding: 5px;
     font-weight: bold;
-    border-radius: 5px 5px 5px 0px;
     user-select: none;
+
+    &_horizontal {
+        top: -38px;
+        border-radius: 5px 5px 5px 0px;
+    }
+
+    &_vertical {
+        left: -38px;
+        border-radius: 5px 5px 0px 5px;
+    }
 }
