Coorect use radio btns

--- a/src/range/View/components/step/step.scss
+++ b/src/range/View/components/step/step.scss
@@ -9,7 +9,7 @@
 
     &_vertical {
       margin: 0 0 0 10px;
-      flex-direction: column;
+      flex-direction: column-reverse;
     }
 
     &_item {
