--- a/src/range/View/components/thumb/thumb.scss
+++ b/src/range/View/components/thumb/thumb.scss
@@ -10,11 +10,12 @@
     box-shadow: 1px 1px 0px #000;
     z-index: 3;
 
-    // &_horizontal {
-    //   transform: translate(-46%, -33%);
-    // }
+    &_horizontal {
+      transform: translateX(-50%);
+    }
 
     &_vertical {
+      transform: translateY(-50%);
       top: 0%;
     }
 
