--- a/src/range/View/components/bar/bar.scss
+++ b/src/range/View/components/bar/bar.scss
@@ -1,7 +1,7 @@
 .j-fer-slider__bar {
     background: rgba(175, 175, 175, 0.5);
     border-radius: 5px;
-    position: absolute;
+    position: relative;
 
     &_horizontal {
         width: 100%;
