--- a/src/demo/options.scss
+++ b/src/demo/options.scss
@@ -1,93 +1,105 @@
 .options {
   width: 80%;
-  height: 241px;
+  height: 100%;
   outline: 1px solid rgba(0, 0, 0, 0.25);
   margin: 0 auto;
-  padding: 30px 5px 5px 5px;
-  margin-top: 50px;
+  padding: 30px 5px 10px 5px;
   border-radius: 4px;
-}
 
-.buttons_container {
+&__buttons_container {
   width: 80%;
-  height: 83px;
   display: flex;
   justify-content: space-between;
   margin: 7px auto;
+
+
+  & span {
+    text-align: center;
+    margin: 0 auto;
+  }
+
+  & div {
+    width: 216px;
+    height: 70px;
+    border-radius: 4px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border: 1px solid rgba(0, 0, 0, 0.8);
+    background-color: #000;
+    color: #fff;
+    box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
+    margin-left: 3px;
+  }
+
+  & button {
+    width: 109px;
+    height: 70px;
+    border-radius: 0px 4px 4px 0px;
+    border: none;
+    background-color: #fff;
+    cursor: pointer;
+  }
 }
 
-.buttons_container span {
-  text-align: center;
-  margin: 0 auto;
-}
-
-.buttons_container div {
-  width: 180px;
-  height: 70px;
-  border-radius: 4px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  border: 1px solid rgba(0, 0, 0, 0.8);
-  background-color: #000;
-  color: #fff;
-  box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
-}
-
-.buttons_container button {
-  width: 109px;
-  height: 70px;
-  border-radius: 0px 4px 4px 0px;
-  border: none;
-  background-color: #fff;
-  cursor: pointer;
-}
-
-.output_container {
+.options__output_container {
   width: 90%;
-  height: 70px;
   display: flex;
   margin: 0 auto;
   margin-top: 50px;
+
+  & span, & input {
+    margin: 0 auto;
+  }
+  
+  & input {
+    border: none;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.8);
+    text-align: center;
+    margin-top: 18px;
+    width: 143px;
+  }
+  
+  & > div:first-child {
+    margin: 0;
+  }
+  
+  & span {
+    margin-top: 5px;
+  }
+  
+  & > div {
+    width: 200px;
+    margin-left: 57px;
+    border-radius: 4px;
+    border: 1px solid rgba(0, 0, 0, 0.8);
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+  }
+}
 }
 
-.output_container span, .output_container input {
-  margin: 0 auto;
-}
+@media screen and (max-width: 1200px) {
+  .options {
+   outline: 1px solid #000;
 
-.output_container input {
-  border: none;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.8);
-  text-align: center;
-  margin-top: 18px;
-  width: 143px;
-}
+    &__buttons_container {
+      flex-wrap: wrap;
 
-.output_container > div:first-child {
-  margin: 0;
-}
+      & div {
+        margin: 0 auto;
+      }
+    }
 
-.output_container span {
-  margin-top: 5px;
-}
+    &__output_container {
+      flex-wrap: wrap;
+      margin-top: 15px !important;
 
-.output_container > div {
-  width: 200px;
-  margin-left: 57px;
-  border-radius: 4px;
-  border: 1px solid rgba(0, 0, 0, 0.8);
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-}
+      & div {
+        margin: 0 auto !important;
+      }
+    }
 
-.container__wrapper {
-  width: 100%;
-  margin: 0 auto;
-}
-
-.preview__slider-box {
-  width: 100%;
-  height: 300px;
-  padding: 20px;
+  }
 }
