--- a/src/demo/panel/panel.scss
+++ b/src/demo/panel/panel.scss
@@ -1,3 +1,8 @@
+.container__wrapper {
+  width: 100%;
+  margin: 0 auto;
+}
+
 .preview {
   width: 95%;
   margin: 50px auto;
@@ -8,94 +13,11 @@
 
   &__container-slider {
     width: 80%;
+    height: 150px;
     margin: 0 auto;
   }
 
   &__container-panel {
-    margin-top: 50px;
-  }
-
-}
-
-.options {
-    width: 80%;
-    height: 241px;
-    outline: 1px solid rgba(0, 0, 0, 0.25);
-    margin: 0 auto;
-    padding: 30px 5px 5px 5px;
-    border-radius: 4px;
-  
-  &__buttons_container {
-    width: 80%;
-    height: 83px;
-    display: flex;
-    justify-content: space-between;
-    margin: 7px auto;
-  
-  
-    & span {
-      text-align: center;
-      margin: 0 auto;
-    }
-  
-    & div {
-      width: 216px;
-      height: 70px;
-      border-radius: 4px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      border: 1px solid rgba(0, 0, 0, 0.8);
-      background-color: #000;
-      color: #fff;
-      box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
-    }
-  
-    & button {
-      width: 109px;
-      height: 70px;
-      border-radius: 0px 4px 4px 0px;
-      border: none;
-      background-color: #fff;
-      cursor: pointer;
-    }
- }
-
-  .output_container {
-    width: 90%;
-    height: 70px;
-    display: flex;
-    margin: 0 auto;
-    margin-top: 50px;
-  
-    & span, & input {
-      margin: 0 auto;
-    }
-    
-    & input {
-      border: none;
-      border-bottom: 1px solid rgba(0, 0, 0, 0.8);
-      text-align: center;
-      margin-top: 18px;
-      width: 143px;
-    }
-    
-    & > div:first-child {
-      margin: 0;
-    }
-    
-    & span {
-      margin-top: 5px;
-    }
-    
-    & > div {
-      width: 200px;
-      margin-left: 57px;
-      border-radius: 4px;
-      border: 1px solid rgba(0, 0, 0, 0.8);
-      display: flex;
-      align-items: center;
-      flex-direction: column;
-    }
+    margin-top: 30px;
   }
 }
