--- a/src/demo/options.scss
+++ b/src/demo/options.scss
@@ -1,88 +1,88 @@
 .options {
   width: 80%;
   height: 100%;
-  outline: 1px solid rgba(0, 0, 0, 0.25);
   margin: 0 auto;
-  padding: 30px 5px 10px 5px;
+  padding: 30px 5px 10px;
   border-radius: 4px;
+  outline: 1px solid rgb(0 0 0 / 25%);
 
-&__buttons_container {
-  width: 80%;
-  display: flex;
-  justify-content: space-between;
-  margin: 7px auto;
-
-
-  & span {
-    text-align: center;
-    margin: 0 auto;
-  }
-
-  & div {
-    width: 216px;
-    height: 70px;
-    border-radius: 4px;
+  &__buttons_container {
     display: flex;
     justify-content: space-between;
-    align-items: center;
-    border: 1px solid rgba(0, 0, 0, 0.8);
-    background-color: #000;
-    color: #fff;
-    box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
-    margin-left: 3px;
+    width: 80%;
+    margin: 7px auto;
+
+    & span {
+      margin: 0 auto;
+      text-align: center;
+    }
+
+    & div {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      width: 216px;
+      height: 70px;
+      margin-left: 3px;
+      color: #fff;
+      background-color: #000;
+      border: 1px solid rgb(0 0 0 / 80%);
+      border-radius: 4px;
+      box-shadow: 4px 4px 4px rgb(0 0 0 / 25%);
+    }
+
+    & button {
+      width: 109px;
+      height: 70px;
+      background-color: #fff;
+      border: none;
+      border-radius: 0 4px 4px 0;
+      cursor: pointer;
+    }
   }
 
-  & button {
-    width: 109px;
-    height: 70px;
-    border-radius: 0px 4px 4px 0px;
-    border: none;
-    background-color: #fff;
-    cursor: pointer;
-  }
-}
-
-.options__output_container {
-  width: 90%;
-  display: flex;
-  margin: 0 auto;
-  margin-top: 50px;
-
-  & span, & input {
-    margin: 0 auto;
-  }
-  
-  & input {
-    border: none;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.8);
-    text-align: center;
-    margin-top: 18px;
-    width: 143px;
-  }
-  
-  & > div:first-child {
-    margin: 0;
-  }
-  
-  & span {
-    margin-top: 5px;
-  }
-  
-  & > div {
-    width: 200px;
-    margin-left: 57px;
-    border-radius: 4px;
-    border: 1px solid rgba(0, 0, 0, 0.8);
+  .options__output_container {
     display: flex;
-    align-items: center;
-    flex-direction: column;
+    width: 90%;
+    margin: 0 auto;
+    margin-top: 50px;
+
+    & span,
+    & input {
+      margin: 0 auto;
+    }
+
+    & input {
+      width: 143px;
+      margin-top: 18px;
+      text-align: center;
+      border: none;
+      border-bottom: 1px solid rgb(0 0 0 / 80%);
+    }
+
+    & > div:first-child {
+      margin: 0;
+    }
+
+    & span {
+      margin-top: 5px;
+    }
+
+    & > div {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width: 200px;
+      margin-left: 57px;
+      border: 1px solid rgb(0 0 0 / 80%);
+      border-radius: 4px;
+    }
   }
-}
 }
 
 @media screen and (max-width: 1200px) {
   .options {
-   outline: 1px solid #000;
+    outline: 1px solid #000;
 
     &__buttons_container {
       flex-wrap: wrap;
@@ -100,6 +100,5 @@
         margin: 0 auto !important;
       }
     }
-
   }
 }
