--- a/src/range/View/components/bar/bar.scss
+++ b/src/range/View/components/bar/bar.scss
@@ -1,15 +1,15 @@
 .j-fer-slider__bar {
-    background: rgba(175, 175, 175, 0.5);
-    border-radius: 5px;
-    position: relative;
+  position: relative;
+  background: rgb(175 175 175 / 50%);
+  border-radius: 5px;
 
-    &_horizontal {
-        width: 100%;
-        height:10px;
-    }
+  &_horizontal {
+    width: 100%;
+    height: 10px;
+  }
 
-    &_vertical {
-        width: 10px;
-        height: 100%;
-    }
+  &_vertical {
+    width: 10px;
+    height: 100%;
+  }
 }
