--- a/src/range/View/components/step/step.scss
+++ b/src/range/View/components/step/step.scss
@@ -1,34 +1,35 @@
 .j-fer-slider__step {
-    display: flex;
-    position: relative;
-    padding: 0;
-    list-style: none;
-    user-select: none;
+  position: relative;
+  display: flex;
+  padding: 0;
+  list-style: none;
+  user-select: none;
 
-    &_vertical {
-      width: 15px;
-      margin: 0 15px;
-      & li {
-        transform: translateY(-50%);
-      }
-    }
-
-    &_horizontal {
-      height: 15px;
-      & li {
-        transform: translateX(-50%);
-      }
-    }
+  &_vertical {
+    width: 15px;
+    margin: 0 15px;
 
     & li {
-      position: absolute;
-      padding: 5px;
-      cursor: pointer;
+      transform: translateY(-50%);
     }
-
   }
 
+  &_horizontal {
+    height: 15px;
+
+    & li {
+      transform: translateX(-50%);
+    }
+  }
+
+  & li {
+    position: absolute;
+    padding: 5px;
+    cursor: pointer;
+  }
+}
+
 .j-fer-slider__step-item:hover {
-  background-color: #D7D7D7;
+  background-color: #d7d7d7;
   border-radius: 5px;
 }
