--- a/src/range/View/components/thumb/thumb.scss
+++ b/src/range/View/components/thumb/thumb.scss
@@ -1,25 +1,25 @@
 .j-fer-slider__thumb {
-    position: absolute;
-    width: 10px;
-    height: 18px;
-    top:-4px;  
-    cursor: pointer;
-    background: #fff;
-    border-radius: 3px;
-    border: 1px solid #000;
-    box-shadow: 1px 1px 0px #000;
-    z-index: 3;
+  position: absolute;
+  top: -4px;
+  z-index: 3;
+  width: 10px;
+  height: 18px;
+  background: #fff;
+  border: 1px solid #000;
+  border-radius: 3px;
+  box-shadow: 1px 1px 0 #000;
+  cursor: pointer;
 
-    &_horizontal {
-      transform: translateX(-50%);
-    }
-
-    &_vertical {
-      transform: translateY(-50%);
-      top: 0%;
-    }
-
-    &_active {
-      z-index: 4;
-    }
+  &_horizontal {
+    transform: translateX(-50%);
   }
+
+  &_vertical {
+    top: 0%;
+    transform: translateY(-50%);
+  }
+
+  &_active {
+    z-index: 4;
+  }
+}
