--- a/src/range/styleRange.scss
+++ b/src/range/styleRange.scss
@@ -1,21 +1,21 @@
-@import 'View/components/bar/bar.scss';
-@import 'View/components/range/range.scss';
-@import 'View/components/step/step.scss';
-@import 'View/components/thumb/thumb.scss';
-@import 'View/components/tip/tip.scss';
+@import "View/components/bar/bar.scss";
+@import "View/components/range/range.scss";
+@import "View/components/step/step.scss";
+@import "View/components/thumb/thumb.scss";
+@import "View/components/tip/tip.scss";
 
 .j-fer-slider {
-  border-radius: 5px;
   position: relative;
+  border-radius: 5px;
   touch-action: none;
 
   &_horizontal {
-    width:100%;
     display: block;
+    width: 100%;
   }
-  
+
   &_vertical {
-    height: 100%;
     display: flex;
+    height: 100%;
   }
 }
