Correct style code for eslint #4

--- a/src/range/View/components/bar/bar.scss
+++ b/src/range/View/components/bar/bar.scss
@@ -1,6 +1,6 @@
 .j-fer-slider__bar {
   position: relative;
-  background: rgb(175 175 175 / 50%);
+  background: #afafaf80;
   border-radius: 5px;
 
   &_horizontal {
