--- a/src/demo/options.scss
+++ b/src/demo/options.scss
@@ -4,7 +4,7 @@
   margin: 0 auto;
   padding: 30px 5px 10px;
   border-radius: 4px;
-  outline: 1px solid rgb(0 0 0 / 25%);
+  outline: 1px solid #00000040;
 
   &__buttons_container {
     display: flex;
@@ -26,9 +26,9 @@
       margin-left: 3px;
       color: #fff;
       background-color: #000;
-      border: 1px solid rgb(0 0 0 / 80%);
+      border: 1px solid #000000cc;
       border-radius: 4px;
-      box-shadow: 4px 4px 4px rgb(0 0 0 / 25%);
+      box-shadow: 4px 4px 4px #00000040;
     }
 
     & button {
@@ -57,7 +57,7 @@
       margin-top: 18px;
       text-align: center;
       border: none;
-      border-bottom: 1px solid rgb(0 0 0 / 80%);
+      border-bottom: 1px solid #000000cc;
     }
 
     & > div:first-child {
@@ -74,7 +74,7 @@
       align-items: center;
       width: 200px;
       margin-left: 57px;
-      border: 1px solid rgb(0 0 0 / 80%);
+      border: 1px solid #000000cc;
       border-radius: 4px;
     }
   }
