--- a/src/demo/head.pug
+++ b/src/demo/head.pug
@@ -11,7 +11,7 @@ html
       meta(name="viewport", content="width=device-width, initial-scale=1.0")
       meta(name="keywords" content=keywords)
       meta(name="description" content=description)
-      link(rel="icon", href="./images/favicon.ico", type="image/x-icon")
+      link(rel="icon", href="./assets/images/favicon.ico", type="image/x-icon")
       title=pageTitle
     body
       block sliders
