--- a/src/range/View/components/thumb/thumb.scss
+++ b/src/range/View/components/thumb/thumb.scss
@@ -8,7 +8,11 @@
   border: 1px solid #000;
   border-radius: 3px;
   box-shadow: 1px 1px 0 #000;
-  cursor: pointer;
+  cursor: grab;
+
+  &:focus {
+    cursor: grabbing;
+  }
 
   &_horizontal {
     transform: translateX(-50%);
