Fix stylelint start #3

--- a/src/demo/panel/panel.scss
+++ b/src/demo/panel/panel.scss
@@ -1,6 +1,8 @@
-.container__wrapper {
-  width: 100%;
-  margin: 0 auto;
+.container {
+  &__wrapper {
+    width: 100%;
+    margin: 0 auto;
+  }
 }
 
 .preview {
