--- a/src/slider/View/components/step/step.scss
+++ b/src/slider/View/components/step/step.scss
@@ -1,37 +1,39 @@
-.j-fer-slider__step {
-  position: relative;
-  display: flex;
-  padding: 0;
-  list-style: none;
-  user-select: none;
+.j-fer-slider {
+  &__step {
+    position: relative;
+    display: flex;
+    padding: 0;
+    list-style: none;
+    user-select: none;
 
-  &_vertical {
-    width: 15px;
-    margin: 0 15px;
+    &_vertical {
+      width: 15px;
+      margin: 0 15px;
+
+      & li {
+        transform: translateY(-50%);
+      }
+    }
+
+    &_horizontal {
+      height: 15px;
+
+      & li {
+        transform: translateX(-50%);
+      }
+    }
 
     & li {
-      transform: translateY(-50%);
+      position: absolute;
+      padding: 5px;
+      cursor: pointer;
     }
   }
 
-  &_horizontal {
-    height: 15px;
-
-    & li {
-      transform: translateX(-50%);
+  &__step-item {
+    &:hover {
+      background-color: #d7d7d7;
+      border-radius: 5px;
     }
-  }
-
-  & li {
-    position: absolute;
-    padding: 5px;
-    cursor: pointer;
-  }
-}
-
-.j-fer-slider__step-item {
-  &:hover {
-    background-color: #d7d7d7;
-    border-radius: 5px;
   }
 }
