--- a/src/demo/options.scss
+++ b/src/demo/options.scss
@@ -6,76 +6,80 @@
   border-radius: 4px;
   outline: 1px solid #00000040;
 
-  &__buttons_container {
-    display: flex;
-    justify-content: space-between;
-    width: 80%;
-    margin: 7px auto;
-
-    & span {
-      margin: 0 auto;
-      text-align: center;
-    }
-
-    & div {
+  &__buttons {
+    &_container {
       display: flex;
-      align-items: center;
       justify-content: space-between;
-      width: 216px;
-      height: 70px;
-      margin-left: 3px;
-      color: #fff;
-      background-color: #000;
-      border: 1px solid #000000cc;
-      border-radius: 4px;
-      box-shadow: 4px 4px 4px #00000040;
-    }
+      width: 80%;
+      margin: 7px auto;
 
-    & button {
-      width: 109px;
-      height: 70px;
-      background-color: #fff;
-      border: none;
-      border-radius: 0 4px 4px 0;
-      cursor: pointer;
+      & span {
+        margin: 0 auto;
+        text-align: center;
+      }
+
+      & div {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        width: 216px;
+        height: 70px;
+        margin-left: 3px;
+        color: #fff;
+        background-color: #000;
+        border: 1px solid #000c;
+        border-radius: 4px;
+        box-shadow: 4px 4px 4px #00000040;
+      }
+
+      & button {
+        width: 109px;
+        height: 70px;
+        background-color: #fff;
+        border: none;
+        border-radius: 0 4px 4px 0;
+        cursor: pointer;
+      }
     }
   }
 
-  .options__output_container {
-    display: flex;
-    width: 90%;
-    margin: 0 auto;
-    margin-top: 50px;
-
-    & span,
-    & input {
-      margin: 0 auto;
-    }
-
-    & input {
-      width: 143px;
-      margin-top: 18px;
-      text-align: center;
-      border: none;
-      border-bottom: 1px solid #000000cc;
-    }
-
-    & > div:first-child {
-      margin: 0;
-    }
-
-    & span {
-      margin-top: 5px;
-    }
-
-    & > div {
+  &__output {
+    &_container {
       display: flex;
-      flex-direction: column;
-      align-items: center;
-      width: 200px;
-      margin-left: 57px;
-      border: 1px solid #000000cc;
-      border-radius: 4px;
+      width: 90%;
+      margin: 0 auto;
+      margin-top: 50px;
+
+      & span,
+      & input {
+        margin: 0 auto;
+      }
+
+      & input {
+        width: 143px;
+        margin-top: 18px;
+        text-align: center;
+        border: none;
+        border-bottom: 1px solid #000c;
+      }
+
+      & > div {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 200px;
+        margin-left: 57px;
+        border: 1px solid #000c;
+        border-radius: 4px;
+      }
+
+      & > div:first-child {
+        margin: 0;
+      }
+
+      & span {
+        margin-top: 5px;
+      }
     }
   }
 }
@@ -85,19 +89,23 @@
     outline: 1px solid #000;
 
     &__buttons_container {
-      flex-wrap: wrap;
+      &_container {
+        flex-wrap: wrap;
 
-      & div {
-        margin: 0 auto;
+        & div {
+          margin: 0 auto;
+        }
       }
     }
 
-    &__output_container {
-      flex-wrap: wrap;
-      margin-top: 15px !important;
+    &__output {
+      &_container {
+        flex-wrap: wrap;
+        margin-top: 15px !important;
 
-      & div {
-        margin: 0 auto !important;
+        & div {
+          margin: 0 auto !important;
+        }
       }
     }
   }
