--- a/src/demo/panel/blocks/buttons/buttons.pug
+++ b/src/demo/panel/blocks/buttons/buttons.pug
@@ -2,13 +2,13 @@ mixin buttons({}={})
   .buttons
     .buttons__section
       span.buttons__caption Tip: 
-      input.js-panel__isTip-input(type="checkbox" name="isTip")
+      input.js-panel__tip(type="checkbox" name="isTip")
     .buttons__section
       span.buttons__caption Range / Double range
-      input.js-panel__isRange-input(type="checkbox" name="isRange")
+      input.js-panel__range(type="checkbox" name="isRange")
     .buttons__section 
       span.buttons__caption Progress Bar
-      input.js-panel__isBarRange-input(type="checkbox" name="isBar")
+      input.js-panel__bar-range(type="checkbox" name="isBar")
     .buttons__section
       span.buttons__caption Vertical
       input.js-panel__vertical-input(type="radio" name="orientation" value="vertical")
@@ -16,4 +16,4 @@ mixin buttons({}={})
       input.js-panel__horizontal-input(type="radio" name="orientation" value="horizontal")
     .buttons__section
       span.buttons__caption Step
-      input.js-panel__isStep-input(type="checkbox" name="isStep")
+      input.js-panel__step-input(type="checkbox" name="isStep")
